add paper js, create lineComponent

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <title>HTML Page</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <meta charset="UTF-8">
-    <script src="main.js"></script>
+    <script src="./js/main.js" type="module"></script>
 </head>
 <body>
     <div id="toolbar">
@@ -16,7 +16,7 @@
         <!-- Top menu elements will go here -->
     </nav>
 
-    <canvas id="canvas"></canvas>
+    <canvas id="window" style="width: 100vw; height: 100vh"></canvas>
 
 </body>
 </html>
