Added file input and export button

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
     <nav id="top-menu">
         <!-- Top menu elements will go here -->
+        <input type="file" id="cifImport" accept="cif" >
+        <button id = "cifExport">Export CIF</button>
+
     </nav>
 
     <canvas id="window" style="width: 100vw; height: 100vh"></canvas>
 
 </body>
 </html>
-
