--- a/index.html
+++ b/index.html
@@ -8,18 +8,44 @@
     <script src="./js/main.js" type="module"></script>
 </head>
 <body>
-    <div id="toolbar">
-        <!-- Toolbar elements will go here -->
+    <div id="sideMenu">
+        <h5>Coords</h5>
+        <p id = "coordWindow">0,0</p>
+
+        <input type="file" name="cifFile" id="importCIF" style="display:none">
+        <label for = "importCIF"><img  class="toolIcon" src="./assets/icons/import.svg" alt="Import" ></label>
+
+        <img id="exportCIF" class="toolIcon" src="./assets/icons/export.svg" alt="Export">
+
+        <img id="reset" class="toolIcon" src="./assets/icons/reset.svg" alt="Reset">
+        <img id="zoomIn" class="toolIcon" src="./assets/icons/zoomIn.svg" alt="Reset">
+        <img id="zoomOut" class="toolIcon" src="./assets/icons/zoomOut.svg" alt="Reset">
     </div>
-
-    <nav id="top-menu">
-        <!-- Top menu elements will go here -->
-        <input type="file" id="cifImport" accept="cif" >
-        <button id = "cifExport">Export CIF</button>
-
-    </nav>
-
+    
     <canvas id="window" style="width: 100vw; height: 100vh"></canvas>
+    <div id = "layerMenu">
 
+        <h5>Layers</h5>
+        <div class="layerItem" id = "PA">
+            <img src="./assets/icons/export.svg" alt="">
+            <p>PA</p>
+        </div>
+        <div class="layerItem" id = "NA">
+            <img src="./assets/icons/export.svg" alt="">
+            <p>NA</p>
+        </div>
+        <div class="layerItem" id = "PK">
+            <img src="./assets/icons/export.svg" alt="">
+            <p>PK</p>
+        </div> 
+        <div class="layerItem" id = "NK">
+            <img src="./assets/icons/export.svg" alt="">
+            <p>NK</p>
+        </div> 
+        <div class="layerItem" id = "SI">
+            <img src="./assets/icons/export.svg" alt="">
+            <p>SI</p>
+        </div> 
+    </div>
 </body>
 </html>
