changed id names for fun and added select icon tool

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 
                 <input type="file" name="cifFile" id="importCIF" style="display:none">
                 <label for = "importCIF"><img  class="toolIcon" src="./assets/icons/import.svg" alt="Import" ></label>
-
-                <img id="exportCIF" class="toolIcon" src="./assets/icons/export.svg" alt="Export">
-
-                <img id="reset" class="toolIcon" src="./assets/icons/reset.svg" alt="Reset">
-                <img id="zoomIn" class="toolIcon" src="./assets/icons/zoomIn.svg" alt="Reset">
-                <img id="zoomOut" class="toolIcon" src="./assets/icons/zoomOut.svg" alt="Reset">
+                <img id="zoomFit" class="toolIcon" src="./assets/icons/reset.svg" alt="Zoom Fit">
+                <img id="zoomIn" class="toolIcon" src="./assets/icons/zoomIn.svg" alt="Zoom In">
+                <img id="zoomOut" class="toolIcon" src="./assets/icons/zoomOut.svg" alt="Zoom Out">
+                <img id="select" class="toolIcon" src="./assets/icons/select.svg" alt="Select">
             </div>
 
 
@@ -36,26 +34,8 @@
         <div id="layerMenu" class="menu">
 
             <h5>Layers</h5>
-            <div class="layerItem" id = "PA">
-                <img src="./assets/icons/export.svg" alt="">
-                <p>PA</p>
-            </div>
-            <div class="layerItem" id = "NA">
-                <img src="./assets/icons/export.svg" alt="">
-                <p>NA</p>
-            </div>
-            <div class="layerItem" id = "PK">
-                <img src="./assets/icons/export.svg" alt="">
-                <p>PK</p>
-            </div>
-            <div class="layerItem" id = "NK">
-                <img src="./assets/icons/export.svg" alt="">
-                <p>NK</p>
-            </div>
-            <div class="layerItem" id = "SI">
-                <img src="./assets/icons/export.svg" alt="">
-                <p>SI</p>
-            </div>
+           
+             
         </div>
 
     </div>
