--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         </div>
 
 
-        <canvas id="window" class="canvas" style=""></canvas>
+        <div>
+            <canvas id="window" class="canvas" style=""></canvas>
+        </div>
 
         <div id="layerMenu" class="menu">
-
             <h5>Layers</h5>
-           
+            <div id="layerItems"></div>
+
              
         </div>
 
