--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <img id="zoomIn" class="toolIcon" src="./assets/icons/zoomIn.svg" alt="Zoom In">
                 <img id="zoomOut" class="toolIcon" src="./assets/icons/zoomOut.svg" alt="Zoom Out">
                 <img id="select" class="toolIcon" src="./assets/icons/select.svg" alt="Select">
+                
+                <div id="groupMenu">
+                    <h5>Группы элементов</h5>
+                    <div id="groupItems"></div>
+                </div>
             </div>
 
 
